# mcp-data-science

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml
examples/: explore_data.ipynb
src/mcp_data_science/: __init__.py  __main__.py  instructions.md  server.py  state.py
src/mcp_data_science/tools/: _plot_helpers.py  analysis.py  cleaning.py  clustering.py  datetime_tools.py  dimensionality.py  encoding.py  feature_selection.py  inspection.py  interpretation.py  loading.py  modeling.py  reporting.py  statistical_tests.py  transformation.py  visualization.py
tests/: conftest.py  test_analysis.py  test_cleaning.py  test_datetime_tools.py  test_encoding.py  test_feature_selection.py  test_inspection.py  test_loading.py  test_modeling.py  test_reporting.py  test_server.py  test_state.py  test_transformation.py  test_visualization.py
