[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-data-science"
version = "0.1.0"
description = "MCP server for data science preprocessing: clean, transform, analyze, and visualize CSV datasets."
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "mcp>=1.6.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    "category-encoders>=2.6.0",
    "scikit-learn>=1.3.0",
    "Pillow>=10.0.0",
]

[project.scripts]
mcp-data-science = "mcp_data_science:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_data_science"]
